@@ -17,6 +17,7 @@ import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격2000�
 import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격2000원_평점3점_생성;
 import static com.funeat.fixture.ProductFixture.상품_삼각김밥_가격3000원_평점4점_생성;
 import static com.funeat.fixture.RecipeFixture.레시피_생성;
+import static com.funeat.fixture.RecipeFixture.레시피_좋아요_생성;
 import static com.funeat.fixture.RecipeFixture.레시피이미지_생성;
 import static com.funeat.fixture.RecipeFixture.레시피좋아요요청_생성;
 import static com.funeat.fixture.RecipeFixture.레시피추가요청_생성;
@@ -274,156 +275,277 @@ class RecipeServiceTest extends ServiceTest {
     @Nested
     class getSortingRecipes_성공_테스트 {
 
-        @Test
-        void 꿀조합을_좋아요가_많은_순으로_정렬할_수_있다() {
-            // given
-            final var member1 = 멤버_멤버1_생성();
-            final var member2 = 멤버_멤버2_생성();
-            final var member3 = 멤버_멤버3_생성();
-            복수_멤버_저장(member1, member2, member3);
+        @Nested
+        class 정렬_기준에_따른_테스트 {
 
-            final var category = 카테고리_간편식사_생성();
-            단일_카테고리_저장(category);
+            @Test
+            void 꿀조합을_좋아요가_많은_순으로_정렬할_수_있다() {
+                // given
+                final var loginId = -1L;
+                final var member1 = 멤버_멤버1_생성();
+                final var member2 = 멤버_멤버2_생성();
+                final var member3 = 멤버_멤버3_생성();
+                복수_멤버_저장(member1, member2, member3);
 
-            final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
-            final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
-            final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
-            복수_상품_저장(product1, product2, product3);
+                final var category = 카테고리_간편식사_생성();
+                단일_카테고리_저장(category);
 
-            final var recipe1_1 = 레시피_생성(member1, 1L);
-            final var recipe1_2 = 레시피_생성(member1, 3L);
-            final var recipe1_3 = 레시피_생성(member1, 2L);
-            복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
+                final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
+                final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+                final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
+                복수_상품_저장(product1, product2, product3);
 
-            final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
-            final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
-            final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
-            final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
-            final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
-            복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
-                    product_recipe_1_2_2);
+                final var recipe1_1 = 레시피_생성(member1, 1L);
+                final var recipe1_2 = 레시피_생성(member1, 3L);
+                final var recipe1_3 = 레시피_생성(member1, 2L);
+                복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
 
-            final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
-            final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
-            final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
-            복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
+                final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
+                final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
+                final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
+                final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
+                final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
+                복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
+                        product_recipe_1_2_2);
 
-            final var page = 페이지요청_생성(0, 10, 좋아요수_내림차순);
+                final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
+                final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
+                final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
+                복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
 
-            // when
-            final var actual = recipeService.getSortingRecipes(page).getRecipes();
-            final var expected = List.of(
-                    RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
-                            List.of(product1, product3)),
-                    RecipeDto.toDto(recipe1_3, List.of(), List.of()),
-                    RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3)));
+                final var page = 페이지요청_생성(0, 10, 좋아요수_내림차순);
 
-            // then
-            assertThat(actual)
-                    .usingRecursiveComparison()
-                    .isEqualTo(expected);
+                // when
+                final var actual = recipeService.getSortingRecipes(loginId, page).getRecipes();
+                final var expected = List.of(
+                        RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
+                                List.of(product1, product3), false),
+                        RecipeDto.toDto(recipe1_3, List.of(), List.of(), false),
+                        RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3),
+                                false));
+
+                // then
+                assertThat(actual)
+                        .usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+
+            @Test
+            void 꿀조합을_최신순으로_정렬할_수_있다() throws InterruptedException {
+                // given
+                final var loginId = -1L;
+                final var member1 = 멤버_멤버1_생성();
+                final var member2 = 멤버_멤버2_생성();
+                final var member3 = 멤버_멤버3_생성();
+                복수_멤버_저장(member1, member2, member3);
+
+                final var category = 카테고리_간편식사_생성();
+                단일_카테고리_저장(category);
+
+                final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
+                final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+                final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
+                복수_상품_저장(product1, product2, product3);
+
+                final var recipe1_1 = 레시피_생성(member1, 1L);
+                Thread.sleep(100);
+                final var recipe1_2 = 레시피_생성(member1, 3L);
+                Thread.sleep(100);
+                final var recipe1_3 = 레시피_생성(member1, 2L);
+                복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
+
+                final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
+                final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
+                final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
+                final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
+                final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
+                복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
+                        product_recipe_1_2_2);
+
+                final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
+                final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
+                final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
+                복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
+
+                final var page = 페이지요청_생성(0, 10, 최신순);
+
+                // when
+                final var actual = recipeService.getSortingRecipes(loginId, page).getRecipes();
+                final var expected = List.of(
+                        RecipeDto.toDto(recipe1_3, List.of(), List.of(), false),
+                        RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
+                                List.of(product1, product3), false),
+                        RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3),
+                                false));
+
+                // then
+                assertThat(actual)
+                        .usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+
+            @Test
+            void 꿀조합을_오래된순으로_정렬할_수_있다() {
+                // given
+                final var loginId = -1L;
+                final var member1 = 멤버_멤버1_생성();
+                final var member2 = 멤버_멤버2_생성();
+                final var member3 = 멤버_멤버3_생성();
+                복수_멤버_저장(member1, member2, member3);
+
+                final var category = 카테고리_간편식사_생성();
+                단일_카테고리_저장(category);
+
+                final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
+                final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+                final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
+                복수_상품_저장(product1, product2, product3);
+
+                final var recipe1_1 = 레시피_생성(member1, 1L);
+                final var recipe1_2 = 레시피_생성(member1, 3L);
+                final var recipe1_3 = 레시피_생성(member1, 2L);
+                복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
+
+                final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
+                final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
+                final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
+                final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
+                final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
+                복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
+                        product_recipe_1_2_2);
+
+                final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
+                final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
+                final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
+                복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
+
+                final var page = 페이지요청_생성(0, 10, 과거순);
+
+                // when
+                final var actual = recipeService.getSortingRecipes(loginId, page).getRecipes();
+                final var expected = List.of(
+                        RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3),
+                                false),
+                        RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
+                                List.of(product1, product3), false),
+                        RecipeDto.toDto(recipe1_3, List.of(), List.of(), false));
+
+                // then
+                assertThat(actual)
+                        .usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
         }
 
-        @Test
-        void 꿀조합을_최신순으로_정렬할_수_있다() throws InterruptedException {
-            // given
-            final var member1 = 멤버_멤버1_생성();
-            final var member2 = 멤버_멤버2_생성();
-            final var member3 = 멤버_멤버3_생성();
-            복수_멤버_저장(member1, member2, member3);
+        @Nested
+        class 로그인_여부_응답_테스트 {
 
-            final var category = 카테고리_간편식사_생성();
-            단일_카테고리_저장(category);
+            @Test
+            void 로그인_안한_경우_모든_꿀조합의_좋아요는_false로_반환한다() {
+                // given
+                final var loginId = -1L;
+                final var member1 = 멤버_멤버1_생성();
+                final var member2 = 멤버_멤버2_생성();
+                final var member3 = 멤버_멤버3_생성();
+                복수_멤버_저장(member1, member2, member3);
 
-            final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
-            final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
-            final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
-            복수_상품_저장(product1, product2, product3);
+                final var category = 카테고리_간편식사_생성();
+                단일_카테고리_저장(category);
 
-            final var recipe1_1 = 레시피_생성(member1, 1L);
-            Thread.sleep(100);
-            final var recipe1_2 = 레시피_생성(member1, 3L);
-            Thread.sleep(100);
-            final var recipe1_3 = 레시피_생성(member1, 2L);
-            복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
+                final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
+                final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+                final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
+                복수_상품_저장(product1, product2, product3);
 
-            final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
-            final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
-            final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
-            final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
-            final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
-            복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
-                    product_recipe_1_2_2);
+                final var recipe1_1 = 레시피_생성(member1, 1L);
+                final var recipe1_2 = 레시피_생성(member1, 3L);
+                final var recipe1_3 = 레시피_생성(member1, 2L);
+                복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
 
-            final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
-            final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
-            final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
-            복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
+                final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
+                final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
+                final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
+                final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
+                final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
+                복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
+                        product_recipe_1_2_2);
 
-            final var page = 페이지요청_생성(0, 10, 최신순);
+                final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
+                final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
+                final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
+                복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
 
-            // when
-            final var actual = recipeService.getSortingRecipes(page).getRecipes();
-            final var expected = List.of(
-                    RecipeDto.toDto(recipe1_3, List.of(), List.of()),
-                    RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
-                            List.of(product1, product3)),
-                    RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3)));
+                final var page = 페이지요청_생성(0, 10, 좋아요수_내림차순);
 
-            // then
-            assertThat(actual)
-                    .usingRecursiveComparison()
-                    .isEqualTo(expected);
-        }
+                // when
+                final var actual = recipeService.getSortingRecipes(loginId, page).getRecipes();
+                final var expected = List.of(
+                        RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
+                                List.of(product1, product3), false),
+                        RecipeDto.toDto(recipe1_3, List.of(), List.of(), false),
+                        RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3),
+                                false));
 
-        @Test
-        void 꿀조합을_오래된순으로_정렬할_수_있다() {
-            // given
-            final var member1 = 멤버_멤버1_생성();
-            final var member2 = 멤버_멤버2_생성();
-            final var member3 = 멤버_멤버3_생성();
-            복수_멤버_저장(member1, member2, member3);
+                // then
+                assertThat(actual)
+                        .usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
 
-            final var category = 카테고리_간편식사_생성();
-            단일_카테고리_저장(category);
+            @Test
+            void 로그인_한_경우_각_꿀조합의_좋아요는_로그인_사용자의_좋아요_여부로_반환한다() {
+                // given
+                final var member1 = 멤버_멤버1_생성();
+                final var member2 = 멤버_멤버2_생성();
+                final var member3 = 멤버_멤버3_생성();
+                복수_멤버_저장(member1, member2, member3);
+                final var loginId = member1.getId();
 
-            final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
-            final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
-            final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
-            복수_상품_저장(product1, product2, product3);
+                final var category = 카테고리_간편식사_생성();
+                단일_카테고리_저장(category);
 
-            final var recipe1_1 = 레시피_생성(member1, 1L);
-            final var recipe1_2 = 레시피_생성(member1, 3L);
-            final var recipe1_3 = 레시피_생성(member1, 2L);
-            복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
+                final var product1 = 상품_삼각김밥_가격1000원_평점5점_생성(category);
+                final var product2 = 상품_삼각김밥_가격2000원_평점3점_생성(category);
+                final var product3 = 상품_삼각김밥_가격2000원_평점1점_생성(category);
+                복수_상품_저장(product1, product2, product3);
 
-            final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
-            final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
-            final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
-            final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
-            final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
-            복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
-                    product_recipe_1_2_2);
+                final var recipe1_1 = 레시피_생성(member1, 1L);
+                final var recipe1_2 = 레시피_생성(member1, 3L);
+                final var recipe1_3 = 레시피_생성(member1, 2L);
+                복수_꿀조합_저장(recipe1_1, recipe1_2, recipe1_3);
 
-            final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
-            final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
-            final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
-            복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
+                final var product_recipe_1_1_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_1);
+                final var product_recipe_1_1_2 = 레시피_안에_들어가는_상품_생성(product2, recipe1_1);
+                final var product_recipe_1_1_3 = 레시피_안에_들어가는_상품_생성(product3, recipe1_1);
+                final var product_recipe_1_2_1 = 레시피_안에_들어가는_상품_생성(product1, recipe1_2);
+                final var product_recipe_1_2_2 = 레시피_안에_들어가는_상품_생성(product3, recipe1_2);
+                복수_꿀조합_상품_저장(product_recipe_1_1_1, product_recipe_1_1_2, product_recipe_1_1_3, product_recipe_1_2_1,
+                        product_recipe_1_2_2);
 
-            final var page = 페이지요청_생성(0, 10, 과거순);
+                final var recipeImage1_1_1 = 레시피이미지_생성(recipe1_1);
+                final var recipeImage1_2_1 = 레시피이미지_생성(recipe1_2);
+                final var recipeImage1_2_2 = 레시피이미지_생성(recipe1_2);
+                복수_꿀조합_이미지_저장(recipeImage1_1_1, recipeImage1_2_1);
 
-            // when
-            final var actual = recipeService.getSortingRecipes(page).getRecipes();
-            final var expected = List.of(
-                    RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3)),
-                    RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
-                            List.of(product1, product3)),
-                    RecipeDto.toDto(recipe1_3, List.of(), List.of()));
+                final var recipeFavorite = 레시피_좋아요_생성(member1, recipe1_1, true);
+                단일_꿀조합_좋아요_저장(recipeFavorite);
 
-            // then
-            assertThat(actual)
-                    .usingRecursiveComparison()
-                    .isEqualTo(expected);
+                final var page = 페이지요청_생성(0, 10, 좋아요수_내림차순);
+
+                // when
+                final var actual = recipeService.getSortingRecipes(loginId, page).getRecipes();
+                final var expected = List.of(
+                        RecipeDto.toDto(recipe1_2, List.of(recipeImage1_2_1, recipeImage1_2_2),
+                                List.of(product1, product3), false),
+                        RecipeDto.toDto(recipe1_3, List.of(), List.of(), false),
+                        RecipeDto.toDto(recipe1_1, List.of(recipeImage1_1_1), List.of(product1, product2, product3),
+                                true));
+
+                // then
+                assertThat(actual)
+                        .usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
         }
     }
 
@@ -556,7 +678,7 @@ class RecipeServiceTest extends ServiceTest {
     }
 
     @Nested
-    class getTop3Recipes_성공_테스트 {
+    class getTop4Recipes_성공_테스트 {
 
         @Nested
         class 꿀조합_개수에_대한_테스트 {
@@ -564,10 +686,11 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 전체_꿀조합이_하나도_없어도_반환값은_있어야한다() {
                 // given
+                final var loginId = -1L;
                 final var expected = RankingRecipesResponse.toResponse(Collections.emptyList());
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -577,6 +700,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 랭킹_조건에_부합하는_꿀조합이_1개면_꿀조합이_1개_반환된다() {
                 // given
+                final var loginId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -585,12 +709,12 @@ class RecipeServiceTest extends ServiceTest {
                 단일_꿀조합_저장(recipe);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto = RankingRecipeDto.toDto(recipe, Collections.emptyList(), author);
+                final var rankingRecipeDto = RankingRecipeDto.toDto(recipe, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = Collections.singletonList(rankingRecipeDto);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -600,6 +724,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 랭킹_조건에_부합하는_꿀조합이_2개면_꿀조합이_2개_반환된다() {
                 // given
+                final var loginId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -609,13 +734,13 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = List.of(rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -623,8 +748,37 @@ class RecipeServiceTest extends ServiceTest {
             }
 
             @Test
-            void 전체_꿀조합_중_랭킹이_높은_상위_3개_꿀조합을_구할_수_있다() {
+            void 랭킹_조건에_부합하는_꿀조합이_3개면_꿀조합이_3개_반환된다() {
                 // given
+                final var loginId = -1L;
+                final var member = 멤버_멤버1_생성();
+                단일_멤버_저장(member);
+
+                final var now = LocalDateTime.now();
+                final var recipe1 = 레시피_생성(member, 2L, now.minusDays(2L));
+                final var recipe2 = 레시피_생성(member, 2L, now.minusDays(1L));
+                final var recipe3 = 레시피_생성(member, 2L, now);
+                복수_꿀조합_저장(recipe1, recipe2, recipe3);
+
+                final var author = RecipeAuthorDto.toDto(member);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
+                final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
+
+                // when
+                final var actual = recipeService.getTop4Recipes(loginId);
+
+                // then
+                assertThat(actual).usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+
+            @Test
+            void 전체_꿀조합_중_랭킹이_높은_상위_4개_꿀조합을_구할_수_있다() {
+                // given
+                final var loginId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -636,15 +790,82 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2, recipe3, recipe4);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
-                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author);
-                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author);
-                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(loginId);
+
+                // then
+                assertThat(actual).usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+        }
+
+        @Nested
+        class 로그인_여부_응답_테스트 {
+
+            @Test
+            void 로그인_안한_경우_꿀조합의_좋아요는_false로_반환한다() {
+                // given
+                final var loginId = -1L;
+                final var member = 멤버_멤버1_생성();
+                단일_멤버_저장(member);
+
+                final var now = LocalDateTime.now();
+                final var recipe1 = 레시피_생성(member, 4L, now.minusDays(10L));
+                final var recipe2 = 레시피_생성(member, 6L, now.minusDays(10L));
+                final var recipe3 = 레시피_생성(member, 5L, now);
+                final var recipe4 = 레시피_생성(member, 6L, now);
+                복수_꿀조합_저장(recipe1, recipe2, recipe3, recipe4);
+
+                final var author = RecipeAuthorDto.toDto(member);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
+                final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
+
+                // when
+                final var actual = recipeService.getTop4Recipes(loginId);
+
+                // then
+                assertThat(actual).usingRecursiveComparison()
+                        .isEqualTo(expected);
+            }
+
+            @Test
+            void 로그인_한_경우_꿀조합의_좋아요는_로그인_사용자의_좋아요_여부로_반환한다() {
+                // given
+                final var member = 멤버_멤버1_생성();
+                단일_멤버_저장(member);
+                final var loginId = member.getId();
+
+                final var now = LocalDateTime.now();
+                final var recipe1 = 레시피_생성(member, 4L, now.minusDays(10L));
+                final var recipe2 = 레시피_생성(member, 6L, now.minusDays(10L));
+                final var recipe3 = 레시피_생성(member, 5L, now);
+                final var recipe4 = 레시피_생성(member, 6L, now);
+                복수_꿀조합_저장(recipe1, recipe2, recipe3, recipe4);
+
+                final var recipeFavorite = 레시피_좋아요_생성(member, recipe1, true);
+                단일_꿀조합_좋아요_저장(recipeFavorite);
+
+                final var author = RecipeAuthorDto.toDto(member);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, true);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
+                final var rankingRecipeDto3 = RankingRecipeDto.toDto(recipe3, Collections.emptyList(), author, false);
+                final var rankingRecipeDto4 = RankingRecipeDto.toDto(recipe4, Collections.emptyList(), author, false);
+                final var rankingRecipesDtos = List.of(rankingRecipeDto4, rankingRecipeDto3, rankingRecipeDto2, rankingRecipeDto1);
+                final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
+
+                // when
+                final var actual = recipeService.getTop4Recipes(loginId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -658,6 +879,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 꿀조합_좋아요_수가_같으면_최근_생성된_꿀조합의_랭킹을_더_높게_반환한다() {
                 // given
+                final var guestId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -667,13 +889,13 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = List.of(rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(guestId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
@@ -683,6 +905,7 @@ class RecipeServiceTest extends ServiceTest {
             @Test
             void 꿀조합_생성_일자가_같으면_좋아요_수가_많은_꿀조합의_랭킹을_더_높게_반환한다() {
                 // given
+                final var guestId = -1L;
                 final var member = 멤버_멤버1_생성();
                 단일_멤버_저장(member);
 
@@ -692,13 +915,13 @@ class RecipeServiceTest extends ServiceTest {
                 복수_꿀조합_저장(recipe1, recipe2);
 
                 final var author = RecipeAuthorDto.toDto(member);
-                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author);
-                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author);
+                final var rankingRecipeDto1 = RankingRecipeDto.toDto(recipe1, Collections.emptyList(), author, false);
+                final var rankingRecipeDto2 = RankingRecipeDto.toDto(recipe2, Collections.emptyList(), author, false);
                 final var rankingRecipesDtos = List.of(rankingRecipeDto2, rankingRecipeDto1);
                 final var expected = RankingRecipesResponse.toResponse(rankingRecipesDtos);
 
                 // when
-                final var actual = recipeService.getTop3Recipes();
+                final var actual = recipeService.getTop4Recipes(guestId);
 
                 // then
                 assertThat(actual).usingRecursiveComparison()
